Putting www's into place

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Old line siperianhuskyt. 40 vuoden ajan tinkimätöntä kasvatustyötä
   alkuperäisen tyypin ja linjojen säilyttämiseksi.
 baseurl: ""
-url: "https://siperianhusky.com"
+url: "https://www.siperianhusky.com"
 
 github_username:  sudensaaga
 author: Jaana Sudensaaga
